--- a/_posts/0000-01-02-loeriver.md
+++ b/_posts/0000-01-02-loeriver.md
@@ -2,5 +2,9 @@
 layout: slide
 title: "Welcome to our second slide!"
 ---
-Your text
+# First markdown test
+* For learning Github
+  * basic workflow
+  * using from VSC
+* For learning markdown 
 Use the left arrow to go back!
